# surrealmcp

./: AUTHENTICATION.md  Cargo.toml  Dockerfile  LICENSE  README.md  history.txt  instructions.md  server.md
.github/: dependabot.yml
.github/workflows/: build-docker-image.yaml  ci.yml
docker/: builder-entrypoint.sh
src/: main.rs
src/cli/: mod.rs
src/cloud/: mod.rs
src/db/: mod.rs
src/engine/: mod.rs
src/logs/: mod.rs
src/prompts/: mod.rs
src/resources/: mod.rs
src/server/: auth.rs  http.rs  limit.rs  mod.rs  start.rs
src/tools/: mod.rs
src/utils/: mod.rs
