[package]
name = "surrealmcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = "0.8"
axum-extra = { version = "0.10", features = ["typed-header"] }
clap = { version = "4", features = ["derive", "env"] }
governor = "0.8"
jsonwebtoken = "9"
metrics = "0.24"
rand = "0.9"
rmcp = { version = "0.3.0", features = [
    "server",
    "macros",
    "transport-streamable-http-server",
    "transport-worker",
] }
schemars = "1.0"
serde = { version = "1", features = ["derive"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tower_governor = "0.7"
serde_json = "1"
surrealdb = { version = "2.3.7", features = [
    "rustls",
    "kv-mem",
    "kv-rocksdb",
    "kv-surrealkv",
    "protocol-ws",
    "protocol-http",
    "http",
] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
