[package]
name = "surrealmcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
base64 = "0.22.1"
clap = { version = "4.5.45", features = ["derive", "env"] }
governor = "0.10.1"
http = "1.3.1"
jsonwebtoken = "9.3.1"
metrics = "0.24.2"
rand = "0.9.2"
reqwest = { version = "0.12.23", default-features = false, features = [
    "json",
    "http2",
    "rustls-tls",
] }
ring = "0.17.14"
rmcp = { version = "0.6.0", features = [
    "server",
    "macros",
    "transport-streamable-http-server",
    "transport-worker",
] }
rustls = "0.23.31"
schemars = "1.0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
surrealdb = { version = "2.3.7", features = [
    "rustls",
    "kv-mem",
    "kv-rocksdb",
    "kv-surrealkv",
    "protocol-ws",
    "protocol-http",
    "http",
] }
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace", "cors"] }
tower_governor = "0.8.0"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
