[package]
name = "surrealmcp"
version = "0.4.1"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.100"
axum = "0.8.8"
axum-extra = { version = "0.10.3", features = ["typed-header"] }
base64 = "0.22.1"
clap = { version = "4.5.56", features = ["derive", "env"] }
governor = "0.10.4"
http = "1.4.0"
jsonwebtoken = "9.3.1"
metrics = "0.24.3"
rand = "0.9.2"
reqwest = { version = "0.12.28", default-features = false, features = [
    "json",
    "http2",
    "rustls-tls",
] }
ring = "0.17.14"
rmcp = { version = "0.14.0", features = [
    "server",
    "macros",
    "transport-streamable-http-server",
    "transport-worker",
] }
rustls = "0.23.36"
schemars = "1.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
surrealdb = { version = "2.6.0", features = [
    "rustls",
    "kv-mem",
    "kv-rocksdb",
    "kv-surrealkv",
    "protocol-ws",
    "protocol-http",
    "http",
] }
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["trace", "cors"] }
tower_governor = "0.8.0"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
